--- a/src/app/playlists/playlist-card/playlist-card.component.html
+++ b/src/app/playlists/playlist-card/playlist-card.component.html
@@ -26,7 +26,7 @@
       <button  class="showing" matRipple (click)="pause()">
         <mat-icon class="white">pause</mat-icon>
       </button>
-    } @else if(this._queueService.currentTrackInfo()?.from === from.id && !this._queueService.currentTrackInfo()?.isBeingPlayed) {
+    } @else if(this._queueService.from.id === playlist.id && !this._queueService.currentTrackInfo()?.isBeingPlayed) {
       <button  class="showing" matRipple (click)="continue()">
         <mat-icon class="white">play_arrow</mat-icon>
       </button>
