--- a/src/styles.scss
+++ b/src/styles.scss
@@ -158,6 +158,7 @@ mat-dialog-container{
   --main-color: #fa1a1a;
   --sidenav-width: 250px;
   --header-height: 65px;
+  --small-header: #090909;
   --artist: #000;
   --header: #090909;
   --primary-black: #090909;
