--- a/src/app/playlists/playlist-detail/playlist-detail.component.html
+++ b/src/app/playlists/playlist-detail/playlist-detail.component.html
@@ -1,7 +1,13 @@
-
+@if(playlist() && showSmallHeader){
+  <div class="slide" [@slideInOut]="'in'">
+    <app-small-header [title]="playlist()!.title" [image]="playlist()!.image_url" [shouldShow]="showSmallHeader"></app-small-header>
+  </div>
+}
 @if (this.playlist() !== null) {
   <div class="playlist" #background>
+
     <div class="top">
+
       <div class="image-info">
         <div class="image">
           @if (this.playlist()!.image_url) {
@@ -58,3 +64,4 @@
     <app-loading></app-loading>
   </div>
 </ng-template>
+
