added artist small header

--- a/src/app/artists/artist-detail/artist-detail.component.html
+++ b/src/app/artists/artist-detail/artist-detail.component.html
@@ -1,3 +1,8 @@
+@if(showSmallHeader){
+  <div class="slide" [@slideInOut]="'in'">
+    <app-small-header [title]="artist.name" [image]="artist.cover" [shouldShow]="showSmallHeader"></app-small-header>
+  </div>
+}
 <div class="artist">
   @if(loaded){
 
