small header fix and implementation

--- a/src/app/albums/album-detail/album-detail.component.html
+++ b/src/app/albums/album-detail/album-detail.component.html
@@ -1,4 +1,12 @@
-
+@if(shouldShowHeader) {
+  <div class="slide" [@slideInOut]="'in'">
+    <app-small-header [tracks]="album.tracks"
+                      [title]="album.name"
+                      [from]="from"
+                      [shouldShow]="shouldShowHeader"
+                      [image]="album.cover"></app-small-header>
+  </div>
+}
 <div class="album">
 
   <div class="top" #background>
