--- a/src/app/artists/artist-detail/artist-detail.component.html
+++ b/src/app/artists/artist-detail/artist-detail.component.html
@@ -1,6 +1,6 @@
 @if(showSmallHeader){
   <div class="slide" [@slideInOut]="'in'">
-    <app-small-header [title]="artist.name" [image]="artist.cover" [shouldShow]="showSmallHeader"></app-small-header>
+    <app-small-header [title]="artist.name" [image]="artist.cover" [shouldShow]="showSmallHeader" [tracks]="artist.own_tracks" [from]="fromPopular"></app-small-header>
   </div>
 }
 <div class="artist">
