--- a/src/app/core/header/small-header/small-header.component.scss
+++ b/src/app/core/header/small-header/small-header.component.scss
@@ -9,6 +9,10 @@
   z-index: 2;
   transform: translateY(0);
   box-shadow: rgba(0, 0, 0, 0.45) 0px 25px 20px -20px;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  gap: 20px;
   .left{
     display: flex;
     flex-direction: row;
@@ -18,14 +22,56 @@
     .image{
       height: 60px;
       opacity: 0;
+
       img{
         width: auto;
         height: inherit;
         box-shadow: 5px 5px 15px rgba(9, 9, 9, 0.28);
+        border-radius: 3px;
+      }
+      .default{
+        border-radius: 3px;
+        width: 60px;
+        height: 60px;
+        background: var(--playlist);
+        box-shadow: 5px 5px 15px rgba(9, 9, 9, 0.28);
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        img{
+          width: 40px;
+          margin-right: 4px;
+        }
       }
     }
     .title{
       opacity: 0;
+    }
+  }
+  .right{
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+    .play{
+      width: 40px;
+      height: 40px;
+      background: var(--main-color);
+      border: none;
+      border-radius: 50%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: .1s ease-in-out;
+      cursor: pointer;
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.2);
+      &:hover{
+        transform: scale(1.1);
+      }
+      .mat-icon{
+        width: 25px;
+        height: 25px;
+        font-size: 25px;
+      }
     }
   }
 }
