--- a/src/styles.scss
+++ b/src/styles.scss
@@ -611,3 +611,77 @@ input[type=email], input[type=password], input[type=text], textarea{
 .mdc-list-item__primary-text{
   color: var(--light-black);
 }
+.form-layout{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 20px;
+  .col-1{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+  }
+  .col-2{
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    &:nth-child(1) {
+      width: inherit;
+    }
+    &:nth-child(1) {
+      width: inherit;
+    }
+  }
+  .ml-18{
+    margin-left: 18px;
+  }
+  .mr-18{
+    margin-right: 18px;
+  }
+  .image{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 20px;
+    /*.cover{
+      background: var(--lighter);
+      width: 100px;
+      height: 100px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 5px;
+      img{
+        border-radius: 5px;
+        width: 100px;
+        height: auto;
+      }
+    }*/
+    button{
+      width: 100%;
+      height: 60px;
+      background: var(--lighter);
+      display: flex;
+      flex-direction: row;
+      justify-content: center;
+      align-items: center;
+      min-height: 60px;
+      .cover{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: flex-start;
+        gap: 20px;
+      }
+      img{
+        width: 50px;
+        height: auto;
+      }
+    }
+  }
+}
+
