--- a/src/app/admin/tracks/add-track-dialog/add-track-dialog.component.html
+++ b/src/app/admin/tracks/add-track-dialog/add-track-dialog.component.html
@@ -2,32 +2,38 @@
   <h1 mat-dialog-title>Add track</h1>
   <div mat-dialog-content>
 <!--    title-->
-    <form [formGroup]="track">
+    <form [formGroup]="trackForm" [enctype]="'multipart/form-data'">
       <div class="form-layout">
         <div class="col-2">
           <div class="image mr-18">
             <input type="file" #inputImage [hidden]="true" accept="image/jpeg,image/png,image/jpg" (change)="onFileSelected($event, 'cover')">
             <button mat-button (click)="inputImage.click()">
               <div class="cover">
-                @if(track.get('cover')?.value) {
+                @if(trackForm.get('cover')?.value) {
                   Cover: <img #image class="track-cover"/>
                 } @else {
                   Select cover image <mat-icon>perm_media</mat-icon>
                 }
               </div>
             </button>
+            @if (trackForm.get('cover')?.hasError('required')) {
+              <mat-error>Cover image is required</mat-error>
+            }
           </div>
           <div class="image ml-18">
             <input type="file" #inputTrack [hidden]="true" accept="audio/mp4,audio/mp3" (change)="onFileSelected($event, 'track')">
             <button mat-button (click)="inputTrack.click()">
               <div class="cover">
-                @if(track.get('track')?.value) {
+                @if(trackForm.get('track')?.value) {
                   <mat-icon>music_note</mat-icon> <p>{{trackInfo}}</p>
                 } @else {
                   <mat-icon>music_note</mat-icon> Select track file
                 }
               </div>
             </button>
+            @if (trackForm.get('track')?.hasError('required')) {
+              <mat-error>Track file is required</mat-error>
+            }
           </div>
         </div>
         <div class="col-2">
@@ -35,19 +41,19 @@
             <mat-label>Select owner of track</mat-label>
             <mat-select formControlName="owner">
               @for (artist of artists; track artist.id) {
-                <mat-option [value]="artist"  [disabled]="artist | isSelectedInFeatures:track.get('features')?.value">{{artist.name}}</mat-option>
+                <mat-option [value]="artist"  [disabled]="artist | isSelectedInFeatures:trackForm.get('features')?.value">{{artist.name}}</mat-option>
               }
             </mat-select>
-            @if (track.get('owner')?.hasError('required')){
+            @if (trackForm.get('owner')?.hasError('required')){
               <mat-error>Owner is required</mat-error>
             }
           </mat-form-field>
 
           <mat-form-field>
             <mat-label>Select album</mat-label>
-            <mat-select formControlName="album" [disabled]="track.get('owner')?.value === null || !track.get('owner')?.value!.albums.length">
-              @if(track.get('owner')?.value) {
-                @for (album of track.get('owner')?.value!.albums; track album.id) {
+            <mat-select formControlName="album" [disabled]="trackForm.get('owner')?.value === null || !trackForm.get('owner')?.value!.albums.length">
+              @if(trackForm.get('owner')?.value) {
+                @for (album of trackForm.get('owner')?.value!.albums; track album.id) {
                   <mat-option [value]="album">{{album.name}}</mat-option>
                 }
               }
@@ -60,7 +66,7 @@
             <mat-label>Select features</mat-label>
             <mat-select [multiple]="true" formControlName="features">
               @for(feature of artists; track feature.id) {
-                @if(feature.id === track.get('owner')?.value?.id) {
+                @if(feature.id === trackForm.get('owner')?.value?.id) {
                   <mat-option [disabled]="true" [value]="feature">{{feature.name}}</mat-option>
                 } @else {
                   <mat-option [value]="feature">{{feature.name}}</mat-option>
@@ -76,16 +82,16 @@
                 <mat-option [value]="genre">{{genre.name}}</mat-option>
               }
             </mat-select>
-            @if (track.get('genre')?.hasError('required')){
+            @if (trackForm.get('genre')?.hasError('required')){
               <mat-error>Is required</mat-error>
             }
           </mat-form-field>
         </div>
 
-        <mat-checkbox>
+        <mat-checkbox formControlName="explicit">
           Is explicit
         </mat-checkbox>
-        <button mat-button (click)="track.reset()">Reset</button>
+        <button mat-button (click)="trackForm.reset()">Reset</button>
       </div>
 
     </form>
@@ -96,7 +102,7 @@
 <!--    explicit-->
   </div>
   <div mat-dialog-actions>
-    <button mat-button class="confirm">Add</button>
+    <button mat-button class="confirm" (click)="confirm()">Add</button>
     <button mat-button class="close">Cancel</button>
   </div>
 </div>
